default/objects/Order/fields/AccountTypeRelated__c.field-meta.xml
<CustomField>
    <fullName>AccountTypeRelated__c</fullName>
    <formula>Account.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Type Related</label>
    <type>Text</type>
</CustomField>