default/objects/Order/fields/AdjusterInterventionRequired__c.field-meta.xml
<CustomField>
    <fullName>AdjusterInterventionRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adjuster Intervention Required</label>
    <type>Checkbox</type>
</CustomField>