default/objects/Order/fields/AIAssessment__c.field-meta.xml
<CustomField>
    <fullName>AIAssessment__c</fullName>
    <label>AI Assessment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>