default/objects/Order/fields/AppointmentDate__c.field-meta.xml
<CustomField>
    <fullName>AppointmentDate__c</fullName>
    <label>Appointment Date</label>
    <type>Date</type>
</CustomField>