default/objects/Order/fields/AppointmentScheduled__c.field-meta.xml
<CustomField>
    <fullName>AppointmentScheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appointment Scheduled</label>
    <type>Checkbox</type>
</CustomField>