default/objects/Order/fields/AppointmentTime__c.field-meta.xml
<CustomField>
    <fullName>AppointmentTime__c</fullName>
    <label>Appointment Time</label>
    <type>Time</type>
</CustomField>