default/objects/Order/fields/AssignmentDate__c.field-meta.xml
<CustomField>
    <fullName>AssignmentDate__c</fullName>
    <label>Assignment Date</label>
    <type>DateTime</type>
</CustomField>