default/objects/Order/fields/BookedAppointment__c.field-meta.xml
<CustomField>
    <fullName>BookedAppointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Booked Appointment</label>
    <type>Checkbox</type>
</CustomField>