default/objects/Order/fields/ChargeIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ChargeIdentifier__c</fullName>
    <externalId>true</externalId>
    <label>Charge Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>