default/objects/Order/fields/ChargeIdentifierAssignmentDate__c.field-meta.xml
<CustomField>
    <fullName>ChargeIdentifierAssignmentDate__c</fullName>
    <label>Charge Identifier Assignment Date</label>
    <type>Date</type>
</CustomField>