default/objects/Order/fields/ChargeIdentifierAssignmentTime__c.field-meta.xml
<CustomField>
    <fullName>ChargeIdentifierAssignmentTime__c</fullName>
    <label>Charge Identifier Assignment Time</label>
    <type>Time</type>
</CustomField>