default/objects/Order/fields/ClaimCoverage__c.field-meta.xml
<CustomField>
    <fullName>ClaimCoverage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Claim Coverage</label>
    <type>Checkbox</type>
</CustomField>