default/objects/Order/fields/ClaimDate__c.field-meta.xml
<CustomField>
    <fullName>ClaimDate__c</fullName>
    <label>Claim Date</label>
    <type>Date</type>
</CustomField>