default/objects/Order/fields/CompletedDateTime__c.field-meta.xml
<CustomField>
    <fullName>CompletedDateTime__c</fullName>
    <label>Completed Date Time</label>
    <type>DateTime</type>
</CustomField>