default/objects/Order/fields/ContactDateTime__c.field-meta.xml
<CustomField>
    <fullName>ContactDateTime__c</fullName>
    <label>Contact Date Time</label>
    <type>DateTime</type>
</CustomField>