default/objects/Order/fields/ContactedPerson__c.field-meta.xml
<CustomField>
    <fullName>ContactedPerson__c</fullName>
    <label>Contacted Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>