default/objects/Order/fields/ContactMade__c.field-meta.xml
<CustomField>
    <fullName>ContactMade__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Made</label>
    <type>Checkbox</type>
</CustomField>