default/objects/Order/fields/Coverage__c.field-meta.xml
<CustomField>
    <fullName>Coverage__c</fullName>
    <label>Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Covered</fullName>
            </value>
            <value>
                <fullName>Not covered</fullName>
            </value>
            <value>
                <fullName>Rejection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>