default/objects/Order/fields/DamageDuetoLackofMaintenance__c.field-meta.xml
<CustomField>
    <fullName>DamageDuetoLackofMaintenance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Damage Due to Lack of Maintenance</label>
    <type>Checkbox</type>
</CustomField>