default/objects/Order/fields/DamagePriortoDateofOccurrence__c.field-meta.xml
<CustomField>
    <fullName>DamagePriortoDateofOccurrence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Damage Prior to Date of Occurrence</label>
    <type>Checkbox</type>
</CustomField>