default/objects/Order/fields/DamagePriortoPolicyInception__c.field-meta.xml
<CustomField>
    <fullName>DamagePriortoPolicyInception__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Damage Prior to Policy Inception</label>
    <type>Checkbox</type>
</CustomField>