default/objects/Order/fields/DateTimeAssignment__c.field-meta.xml
<CustomField>
    <fullName>DateTimeAssignment__c</fullName>
    <description>used for task logic</description>
    <label>DateTimeAssignment</label>
    <type>DateTime</type>
</CustomField>