default/objects/Order/fields/DateTimeFilledAvance__c.field-meta.xml
<CustomField>
    <fullName>DateTimeFilledAvance__c</fullName>
    <label>Date Time Filled Avance</label>
    <type>DateTime</type>
</CustomField>