default/objects/Order/fields/DateTimeFilledPreAvance__c.field-meta.xml
<CustomField>
    <fullName>DateTimeFilledPreAvance__c</fullName>
    <label>Date Time Filled Pre Avance</label>
    <type>DateTime</type>
</CustomField>