default/objects/Order/fields/DateTimeFilledReasonForNoAppointmen__c.field-meta.xml
<CustomField>
    <fullName>DateTimeFilledReasonForNoAppointmen__c</fullName>
    <label>DateTime Filled Reason For No Appointmen</label>
    <type>DateTime</type>
</CustomField>