default/objects/Order/fields/DateTimeReasonNoAppointmentScheduled__c.field-meta.xml
<CustomField>
    <fullName>DateTimeReasonNoAppointmentScheduled__c</fullName>
    <description>Reason For No Appointment Scheduled  Date Time Filled For Task Logic</description>
    <label>DateTime Reason No Appointment Scheduled</label>
    <type>DateTime</type>
</CustomField>