default/objects/Order/fields/EstimatedToExceedLimit__c.field-meta.xml
<CustomField>
    <fullName>EstimatedToExceedLimit__c</fullName>
    <label>Estimated to exceed limit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>