default/objects/Order/fields/EstimatedVisitDate__c.field-meta.xml
<CustomField>
    <fullName>EstimatedVisitDate__c</fullName>
    <label>Estimated Visit Date</label>
    <type>DateTime</type>
</CustomField>