default/objects/Order/fields/ExpertAssigned__c.field-meta.xml
<CustomField>
    <fullName>ExpertAssigned__c</fullName>
    <label>Expert Assigned</label>
    <length>255</length>
    <type>Text</type>
</CustomField>