default/objects/Order/fields/FailedContactReason__c.field-meta.xml
<CustomField>
    <fullName>FailedContactReason__c</fullName>
    <label>Failed Contact Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>