default/objects/Order/fields/FilledContactDateTime__c.field-meta.xml
<CustomField>
    <fullName>FilledContactDateTime__c</fullName>
    <label>Filled Contact Date Time</label>
    <type>DateTime</type>
</CustomField>