default/objects/Order/fields/FilledPendienteCitaAux__c.field-meta.xml
<CustomField>
    <fullName>FilledPendienteCitaAux__c</fullName>
    <label>Filled Pendiente Cita Aux</label>
    <type>DateTime</type>
</CustomField>