default/objects/Order/fields/GCOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>GCOrderNumber__c</fullName>
    <label>GC Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>