default/objects/Order/fields/GeoLocation__c.field-meta.xml
<CustomField>
    <fullName>GeoLocation__c</fullName>
    <label>Geo-Location</label>
    <scale>9</scale>
    <type>Location</type>
</CustomField>