default/objects/Order/fields/iFrame__c.field-meta.xml
<CustomField>
    <fullName>iFrame__c</fullName>
    <label>iFrame</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>