default/objects/Order/fields/IsToShowReopenButton__c.field-meta.xml
<CustomField>
    <fullName>IsToShowReopenButton__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is to show Reopen Button</label>
    <type>Checkbox</type>
</CustomField>