default/objects/Order/fields/LastStatusDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastStatusDateTime__c</fullName>
    <label>Last Status Date/Time</label>
    <type>DateTime</type>
</CustomField>