default/objects/Order/fields/LastUpdateDateTimeCustom__c.field-meta.xml
<CustomField>
    <fullName>LastUpdateDateTimeCustom__c</fullName>
    <description>Task Logic
Desde o Last Modified Date do Encargo tem Check Box Urgente a True</description>
    <label>Last Update Date Time Custom</label>
    <type>DateTime</type>
</CustomField>