default/objects/Order/fields/MeetsVATConditions__c.field-meta.xml
<CustomField>
    <fullName>MeetsVATConditions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meets VAT Conditions</label>
    <type>Checkbox</type>
</CustomField>