default/objects/Order/fields/NoRepairReason__c.field-meta.xml
<CustomField>
    <fullName>NoRepairReason__c</fullName>
    <label>No Repair Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compensation - Preferred Repairer</fullName>
            </value>
            <value>
                <fullName>Corrosion</fullName>
            </value>
            <value>
                <fullName>Pending repair of originating cause</fullName>
            </value>
            <value>
                <fullName>Need for intervention of other trades before continuing work</fullName>
            </value>
            <value>
                <fullName>No coverage</fullName>
            </value>
            <value>
                <fullName>Insured requests compensation. Trusted repairer</fullName>
            </value>
            <value>
                <fullName>Pending tools for localization</fullName>
            </value>
            <value>
                <fullName>Restricted hours for noise</fullName>
            </value>
            <value>
                <fullName>Adverse weather conditions for repair</fullName>
            </value>
            <value>
                <fullName>Client request</fullName>
            </value>
            <value>
                <fullName>Expert assessment intervention required</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Lack of Maintenance</fullName>
                <isActive>false</isActive>
                <label>Lack of Maintenance</label>
            </value>
            <value>
                <fullName>Pending Material</fullName>
                <isActive>false</isActive>
                <label>Pending Material</label>
            </value>
            <value>
                <fullName>Schedules</fullName>
                <isActive>false</isActive>
                <label>Schedules</label>
            </value>
            <value>
                <fullName>Specialist Required</fullName>
                <isActive>false</isActive>
                <label>Specialist Required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>