default/objects/Order/fields/NoShowReason__c.field-meta.xml
<CustomField>
    <fullName>NoShowReason__c</fullName>
    <label>No-Show Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Postponed by Customer</fullName>
            </value>
            <value>
                <fullName>Pending Responsible Party</fullName>
            </value>
            <value>
                <fullName>Pending Claimant</fullName>
            </value>
            <value>
                <fullName>Order Cancellation</fullName>
            </value>
            <value>
                <fullName>Uninsured Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>