default/objects/Order/fields/Observaciones__c.field-meta.xml
<CustomField>
    <fullName>Observaciones__c</fullName>
    <label>Observations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>