default/objects/Order/fields/OngoingDamage__c.field-meta.xml
<CustomField>
    <fullName>OngoingDamage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ongoing Damage</label>
    <type>Checkbox</type>
</CustomField>