default/objects/Order/fields/OperatorAssessment__c.field-meta.xml
<CustomField>
    <fullName>OperatorAssessment__c</fullName>
    <label>Operator Assessment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>