default/objects/Order/fields/OperatorDescription__c.field-meta.xml
<CustomField>
    <fullName>OperatorDescription__c</fullName>
    <label>Operator Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>