default/objects/Order/fields/OPFVTSIndicatorsPresent__c.field-meta.xml
<CustomField>
    <fullName>OPFVTSIndicatorsPresent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OPF/VTS Indicators Present</label>
    <type>Checkbox</type>
</CustomField>