default/objects/Order/fields/OrderHandlingDuration__c.field-meta.xml
<CustomField>
    <fullName>OrderHandlingDuration__c</fullName>
    <formula>IF(
ISBLANK(ActivatedDate),
TODAY() - DATEVALUE(CreatedDate),
DATEVALUE(ActivatedDate) - DATEVALUE(CreatedDate) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Handling Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>