default/objects/Order/fields/OriginalOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OriginalOrderNumber__c</fullName>
    <label>Original Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>