default/objects/Order/fields/OriginIdentification__c.field-meta.xml
<CustomField>
    <fullName>OriginIdentification__c</fullName>
    <label>Origin Identification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic activities</fullName>
            </value>
            <value>
                <fullName>Appliance older than 10 years</fullName>
            </value>
            <value>
                <fullName>Telephony, image, sound and IT equipment</fullName>
            </value>
            <value>
                <fullName>Drain blockage with damage</fullName>
            </value>
            <value>
                <fullName>Manhole or well blockage</fullName>
            </value>
            <value>
                <fullName>Community blockage</fullName>
            </value>
            <value>
                <fullName>Drain blockage without damage</fullName>
            </value>
            <value>
                <fullName>Terrace blockage</fullName>
            </value>
            <value>
                <fullName>Blockage, cleaning, obstructions</fullName>
            </value>
            <value>
                <fullName>Generic breakdown</fullName>
            </value>
            <value>
                <fullName>Mechanical and electrical breakdown</fullName>
            </value>
            <value>
                <fullName>Glass railings and steps</fullName>
            </value>
            <value>
                <fullName>Electric bicycle, electric scooter</fullName>
            </value>
            <value>
                <fullName>Paving blocks</fullName>
            </value>
            <value>
                <fullName>Fall of aerolites/aircraft</fullName>
            </value>
            <value>
                <fullName>Falling trees, poles and antennas</fullName>
            </value>
            <value>
                <fullName>Capillarity</fullName>
            </value>
            <value>
                <fullName>Accidental cause: fall, impact and liquid spill</fullName>
            </value>
            <value>
                <fullName>Animal collision</fullName>
            </value>
            <value>
                <fullName>Vehicle collision</fullName>
            </value>
            <value>
                <fullName>Condensation</fullName>
            </value>
            <value>
                <fullName>Corrosion</fullName>
            </value>
            <value>
                <fullName>Corrosion, oxidation</fullName>
            </value>
            <value>
                <fullName>Short circuit in home installation</fullName>
            </value>
            <value>
                <fullName>Door glass</fullName>
            </value>
            <value>
                <fullName>Window glass</fullName>
            </value>
            <value>
                <fullName>Furniture glass/mirrors and methacrylates</fullName>
            </value>
            <value>
                <fullName>Home glass/mirrors and methacrylates</fullName>
            </value>
            <value>
                <fullName>Construction defect</fullName>
            </value>
            <value>
                <fullName>Aesthetic defect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>