default/objects/Order/fields/OriginRepaired__c.field-meta.xml
<CustomField>
    <fullName>OriginRepaired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Origin Repaired</label>
    <type>Checkbox</type>
</CustomField>