default/objects/Order/fields/OtherStakeholders__c.field-meta.xml
<CustomField>
    <fullName>OtherStakeholders__c</fullName>
    <label>Other Stakeholders</label>
    <length>255</length>
    <type>Text</type>
</CustomField>