default/objects/Order/fields/Processing__c.field-meta.xml
<CustomField>
    <fullName>Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processing</label>
    <type>Checkbox</type>
</CustomField>