default/objects/Order/fields/ProfessionalData__c.field-meta.xml
<CustomField>
    <fullName>ProfessionalData__c</fullName>
    <label>Professional Data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>