default/objects/Order/fields/ProviderChoosed__c.field-meta.xml
<CustomField>
    <fullName>ProviderChoosed__c</fullName>
    <label>Provider Choosed In Creation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>