default/objects/Order/fields/ProviderReference__c.field-meta.xml
<CustomField>
    <fullName>ProviderReference__c</fullName>
    <label>Provider Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>