default/objects/Order/fields/ProviderType__c.field-meta.xml
<CustomField>
    <fullName>ProviderType__c</fullName>
    <label>Provider Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MU</fullName>
                <label>Multi-trade</label>
            </value>
            <value>
                <fullName>MA</fullName>
                <label>Handyman</label>
            </value>
            <value>
                <fullName>DE</fullName>
                <label>Drain Unblocking</label>
            </value>
            <value>
                <fullName>CE</fullName>
                <label>Locksmith</label>
            </value>
            <value>
                <fullName>CR</fullName>
                <label>Glazing</label>
            </value>
            <value>
                <fullName>ELBA</fullName>
                <label>Electrical</label>
            </value>
            <value>
                <fullName>CA</fullName>
                <label>Carpentry</label>
            </value>
            <value>
                <fullName>PA</fullName>
                <label>Flooring (Parquet)</label>
            </value>
            <value>
                <fullName>LS</fullName>
                <label>Sanitary Ware</label>
            </value>
            <value>
                <fullName>ST</fullName>
                <label>Technical Service</label>
            </value>
            <value>
                <fullName>TC</fullName>
                <label>Boiler Technician</label>
            </value>
            <value>
                <fullName>OT</fullName>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>