default/objects/Order/fields/ReasonforAdjusterIntervention__c.field-meta.xml
<CustomField>
    <fullName>ReasonforAdjusterIntervention__c</fullName>
    <label>Reason for Adjuster Intervention</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer request</fullName>
            </value>
            <value>
                <fullName>Difficulty locating origin</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Based on damage amount</fullName>
            </value>
            <value>
                <fullName>Content damage</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>