default/objects/Order/fields/ReasonForNoAppointmentScheduled__c.field-meta.xml
<CustomField>
    <fullName>ReasonForNoAppointmentScheduled__c</fullName>
    <label>Reason for No Appointment Scheduled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Postponed by the Customer</fullName>
            </value>
            <value>
                <fullName>Pending Third Party Responsible</fullName>
            </value>
            <value>
                <fullName>Pending Affected Party</fullName>
            </value>
            <value>
                <fullName>Job Cancelled. Repaired by Third Party Responsible</fullName>
            </value>
            <value>
                <fullName>Job Cancelled. Compensation Granted</fullName>
            </value>
            <value>
                <fullName>Risk Not Insured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>