default/objects/Order/fields/Rejection__c.field-meta.xml
<CustomField>
    <fullName>Rejection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rejection</label>
    <type>Checkbox</type>
</CustomField>