default/objects/Order/fields/RelatedOrder__c.field-meta.xml
<CustomField>
    <fullName>RelatedOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>