default/objects/Order/fields/ScheduledTime__c.field-meta.xml
<CustomField>
    <fullName>ScheduledTime__c</fullName>
    <label>Scheduled Time</label>
    <type>Time</type>
</CustomField>