default/objects/Order/fields/Selected_For_Reopening__c.field-meta.xml
<CustomField>
    <fullName>Selected_For_Reopening__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selected For Reopening</label>
    <type>Checkbox</type>
</CustomField>