default/objects/Order/fields/SupplierFilled12HoursAfter__c.field-meta.xml
<CustomField>
    <fullName>SupplierFilled12HoursAfter__c</fullName>
    <description>This field is used for Task Logic
Desde a Asignação do Encargo tem Check Box Urgente a False e o Campo Fecha y Hora de Contacto está a null</description>
    <label>Supplier Filled 12 Hours After</label>
    <type>DateTime</type>
</CustomField>