default/objects/Order/fields/SupplierFilled30MinutesAfter__c.field-meta.xml
<CustomField>
    <fullName>SupplierFilled30MinutesAfter__c</fullName>
    <description>This field is used in task logic
Desde a Asignação do Encargo tem Check Box Urgente a True e o Campo Fecha y Hora de Contacto está a null</description>
    <label>Supplier Filled 30 Minutes After</label>
    <type>DateTime</type>
</CustomField>