default/objects/Order/fields/ThereWasContact__c.field-meta.xml
<CustomField>
    <fullName>ThereWasContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>There Was Contact</label>
    <type>Checkbox</type>
</CustomField>