default/objects/Order/fields/ThirdPartyInformation__c.field-meta.xml
<CustomField>
    <fullName>ThirdPartyInformation__c</fullName>
    <label>Third Party Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>