default/objects/Order/fields/TotalBudgetAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalBudgetAmount__c</fullName>
    <label>Total Budget Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>