default/objects/Order/fields/Typology__c.field-meta.xml
<CustomField>
    <fullName>Typology__c</fullName>
    <label>Typology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Progress</fullName>
            </value>
            <value>
                <fullName>Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>