default/objects/Order/fields/UrlLinkStatus__c.field-meta.xml
<CustomField>
    <fullName>UrlLinkStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Urlink Status</label>
    <type>Checkbox</type>
</CustomField>