default/objects/Order/fields/VisitCompleted__c.field-meta.xml
<CustomField>
    <fullName>VisitCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visit Completed</label>
    <type>Checkbox</type>
</CustomField>