default/objects/Order/fields/VisitDateTime__c.field-meta.xml
<CustomField>
    <fullName>VisitDateTime__c</fullName>
    <label>Visit Date Time</label>
    <type>DateTime</type>
</CustomField>