default/objects/Order/fields/VisitNotCompletedReason__c.field-meta.xml
<CustomField>
    <fullName>VisitNotCompletedReason__c</fullName>
    <label>Visit Not Completed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appointment Rescheduled</fullName>
            </value>
            <value>
                <fullName>By Policyholder</fullName>
            </value>
            <value>
                <fullName>By Responsible Party</fullName>
            </value>
            <value>
                <fullName>By Claimant</fullName>
            </value>
            <value>
                <fullName>Appointment Cancelled</fullName>
            </value>
            <value>
                <fullName>By Platform</fullName>
            </value>
            <value>
                <fullName>By Insurance Company</fullName>
            </value>
            <value>
                <fullName>By Adjuster</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>