default/objects/Order/fields/VisitType__c.field-meta.xml
<CustomField>
    <fullName>VisitType__c</fullName>
    <label>Visit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Person</fullName>
            </value>
            <value>
                <fullName>Video Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>